[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Chaser.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/Enemies/Mummy_enemy_1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 11.0

[sub_resource type="CircleShape2D" id=4]
radius = 11.0

[sub_resource type="CircleShape2D" id=5]
radius = 124.016

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 3 )

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -1 )
shape = SubResource( 4 )

[node name="MummyEnemy1" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 2 )

[node name="WakeBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WakeBox"]
shape = SubResource( 5 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_entered" from="WakeBox" to="." method="_on_WakeBox_area_entered"]
